--- a/landing_page_ultrassom/css/styles.css
+++ b/landing_page_ultrassom/css/styles.css
@@ -131,11 +131,14 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    padding: 5px 0;
 }
 
 .logo img {
-    height: 50px;
+    width: 160px;   /* ajuste aqui para o tamanho desejado */
+    height: auto;
+    display: block;
+    margin-bottom: 20px;
 }
 
 .nav-links {
@@ -165,7 +168,7 @@ section {
 /* Hero Section */
 .hero {
     background: linear-gradient(135deg, #fff6fa 0%, #f0e7ff 100%);
-    padding: 80px 0;
+    padding: 20px 0;
     position: relative;
     overflow: hidden;
 }
@@ -713,9 +716,12 @@ section {
     margin-bottom: 40px;
 }
 
+
 .footer-logo img {
-    height: 50px;
-    margin-bottom: 15px;
+    width: 160px;   /* ajuste aqui para o tamanho desejado */
+    height: auto;
+    display: block;
+    margin-bottom: 20px;
 }
 
 .footer-logo p {
